# haxo-rs

./: Cargo.toml  LICENSE  README.md  notemap.json
.github/workflows/: docker-image.yml  haxo-rpiz.yml
docker/: README.md  fix-sysroot.sh  multistrap-config  pizero.dockerfile
docs/: zero-setup.md
midi/startup/: Startup_Haxophone.mid  Startup_Haxophone.mscz
scripts/: provision.sh
scripts/systemd/: blink-zero.service  create_midi_gadget.sh  haxo.service  install.sh
src/: alsa.rs  commands.rs  keyscan.rs  main.rs  midi.rs  midinotes.rs  notemap.rs  pressure.rs  synth.rs  transpose.rs
