[package]
name = "haxo001"
version = "0.1.0"
authors = ["Javier Cardona <javier.cardona@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
rand = "0.8.0"
rppal = { version = "0.13.1", features = ["hal"] }
serde_json = "1.0"
schedule_recv = "0.1"
static_assertions = "1.1.0"
structopt = "0.3.22"
time = "0.3.1"

[dependencies.fluidsynth]
git = "https://github.com/scholtzan/rust-fluidsynth"

[features]
default = []
# Enable timing measurements via GPIO (UART_RXD).  Cannot be enabled when serial
# console is used.
instrumentation = []
